# romam

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  MANUAL.zh-CN.md  Makefile  QUICK_START.md  README.md  pyproject.toml
NSDI2026/: .gitignore  USENIX-conference-paper.aux  USENIX-conference-paper.bbl  (+7 more)
src/irp/: Cargo.toml  README.md  __init__.py  routerd.py
src/irp/apps/: traffic_app.py
src/irp/model/: __init__.py  messages.py  routing.py  state.py
src/irp/protocols/: __init__.py  base.py  ospf.py  rip.py
src/irp/runtime/: __init__.py  bootstrap_routerd.sh  config.py  daemon.py  forwarding.py
src/irp/src/: main.rs
src/irp/src/model/: control_plane.rs  messages.rs  mod.rs  routing.rs  state.rs
src/irp/src/protocols/: base.rs  ddr.rs  ecmp.rs  link_state.rs  mod.rs  ospf.rs  profile.rs  rip.rs  route_compute.rs  spath.rs  topk.rs
src/irp/src/protocols/route_compute/: bellman_ford.rs  dv.rs  frontier.rs  ksp.rs  mod.rs  multimetric.rs  neighbor_forest.rs  spf.rs  strategy.rs  traits.rs  types.rs
src/irp/src/protocols/route_compute/algorithms/: mod.rs
src/irp/src/protocols/route_compute/algorithms/bellman_ford/: mod.rs
src/irp/src/protocols/route_compute/algorithms/cspf/: mod.rs
src/irp/src/protocols/route_compute/algorithms/dijkstra/: mod.rs
src/irp/src/protocols/route_compute/algorithms/pareto/: mod.rs
src/irp/src/protocols/route_compute/algorithms/weighted_sum/: mod.rs
src/irp/src/protocols/route_compute/algorithms/yen/: mod.rs
src/irp/src/runtime/: config.rs  daemon.rs  mgmt.rs  mod.rs  transport.rs
src/irp/src/runtime/qdisc/: controller.rs  core.rs  driver.rs  ecn.rs  fifo.rs  mod.rs  pfifo_fast.rs  prio.rs  red.rs  strategy.rs
src/irp/utils/: bench_shortest_path_matrix.py  io.py
src/irp_rust/: Cargo.toml  README.md
src/irp_rust/src/: lib.rs  main.rs
src/irp_rust/src/algo/: mod.rs
src/irp_rust/src/model/: messages.rs  state.rs
src/irp_rust/src/protocols/: base.rs  mod.rs  rip.rs
src/irp_rust/src/runtime/: config.rs  daemon.rs  forwarding.rs  mod.rs
standalone/: CMakeLists.txt  README.md  romam_spec.py
standalone/containerlab/: README.md  gen.py
standalone/core/: CMakeLists.txt
standalone/core/include/romam/: config.hpp  ip.hpp  lsdb.hpp  spf.hpp  wire.hpp
standalone/core/src/: config.cpp  lsdb.cpp  spf.cpp  wire.cpp
standalone/daemon/: CMakeLists.txt
standalone/daemon/src/: linux_netlink.cpp  linux_netlink.hpp  main.cpp  multicast.cpp  multicast.hpp
standalone/docker/: Dockerfile  Dockerfile.clab
standalone/examples/: romamd.conf
standalone/linuxns/: README.md  run.py
standalone/mininet/: README.md  run.py  spec.schema.json
standalone/mininet/specs/: abilene.toml  linear5.toml
standalone/protocol/core/: CMakeLists.txt
standalone/protocol/core/include/romam/: config.hpp  lsdb.hpp  routing.hpp  spf.hpp  wire.hpp
standalone/protocol/core/src/: config.cpp  ip.cpp  lsdb.cpp  routing.cpp
standalone/protocol/daemon/: CMakeLists.txt
standalone/protocol/daemon/src/: linux_netlink.cpp  linux_netlink.hpp  main.cpp  multicast.hpp
standalone/traffic/: CMakeLists.txt
standalone/traffic/src/: romam_traffic.cpp
(+543 files in other folders)
