[package]
name = "irp"
version = "0.1.0"
edition = "2021"
description = "Rust routing daemon (routingd) for IRP experiments"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[[bin]]
name = "routingd"
path = "src/main.rs"

[[bin]]
name = "node_supervisor"
path = "src/bin/node_supervisor.rs"
